# InnovationNetworks

./: .gitignore  Main.jl  Manifest.toml  Project.toml  README.md  empirical.py  py_metrics.ipynb  pyproject.toml  simulation.py
calculate_metrics/: Manifest.toml  README.md  main.py
calculate_metrics/prepare/: README.md  prepare_netbiz.py
empirical/: Project.toml  README.md  empirical.py  main.py
fitting/: Manifest.toml  README.md  main.py  make_model.py  qd.py
fitting/history2bd/: main.py
full_search/: Manifest.toml  Project.toml  README.md  analyse.py  analyse_best_worst.py  full_search.py  main.py
innovation/: innovation_process.py
lib/: Models.jl  graph2metrics.py  julia_initializer.py  network_measuring_tools.py  run_innovation_process.py  run_model.py  utils.py
qd/: Manifest.toml  Project.toml  main.py  qd.py  statistical_analysis.ipynb  test.py
utils/: utils.py
visualisation/src/: App.js
visualisation/src/components/: Comparison.js  Graph.css  Graph.js  InnovationComparison.js
visualise/: main.py
visualise/graphs/: best_worst_bar_chart.py  innovation_vs_rho_nu.py  metrics_bar.py  metrics_rader.py  network_knowledge_timeline.py  node_knowledge_standard_deviation_timeline.py  rho_nu_space_all.py  rho_nu_space_best_worst.py  timeline.py
web_server/public/: index.html
web_server/src/: App.js
web_server/src/components/: BestWorst.js  Graph.js
webapp/src/: App.js
webapp/src/components/: BestNCTF.js  BestTTF.js  EmpiricalComparison.js  Graph.js  SimulationComparison.js  Timeline.js
