[tool.poetry]
name = "innovation-networks"
version = "0.1.0"
description = ""
authors = ["ciaran-regan-ie <ciaranregan123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
networkx = "^2.6"
matplotlib = "^3.7.2"
julia = "^0.6.1"
karateclub = "1.3.3"
rsurn = {git = "https://github.com/tsukuba-websci/rsurn", rev = "ciaran/fix_connectedness"}
ribs = "^0.5.2"
seaborn = "^0.12.2"
tdqm = "^0.0.1"
statsmodels = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"